# FiqueSegura

./: .flake8  Home.py  README.md  _Home.py  pyproject.toml  pytest.ini
.streamlit/: config.toml
pages/: Calor.py  Dados.py  Sobre.py
tests/: test_about.py  test_dados.py  test_home.py  test_sobre.py
utils/: __init__.py  workspace.ipynb
