[tool.poetry]
name = "fiquesegura"
version = "0.1.0"
description = ""
authors = ["Priscila Pereira Nunes"]
license = "LGPL"
readme = "README.md"
packages = [
    {include = "pages"},
    {include = "utils"},
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.43.2"
tabulate = "^0.9.0"
folium = "^0.19.5"
geopandas = "^1.0.1"
streamlit-folium = "^0.24.0"
unidecode = "^1.3.8"
matplotlib = "^3.10.1"
watchdog = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
